--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,20 @@ address {
   font-style: normal;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 body {
   font-family: "Raleway", sans-serif;
   font-weight: 500;
@@ -76,7 +90,17 @@ body {
   margin: 0 auto;
 }
 
+.wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
 .header {
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  background-color: transparent;
+  transition: background-color 0.5s;
   padding: 34px 0;
 }
 .header__block {
@@ -97,13 +121,13 @@ body {
   line-height: 1.4;
   transition: color 0.5s;
 }
-.header__phone:hover {
+.header__phone:is(:hover, :focus) {
   color: var(--cta);
 }
-.header__phone:hover .header__phone-button {
+.header__phone:is(:hover, :focus) .header__phone-button {
   background-color: var(--cta);
 }
-.header__phone:hover .header__phone-icon {
+.header__phone:is(:hover, :focus) .header__phone-icon {
   fill: var(--white);
 }
 .header__phone-button {
@@ -113,6 +137,7 @@ body {
   width: 27px;
   height: 27px;
   transition: background-color 0.5s;
+  margin-right: 9px;
 }
 .header__phone-icon {
   width: 17px;
@@ -127,7 +152,7 @@ body {
   position: absolute;
   top: -9px;
   right: -10px;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   width: 15px;
@@ -163,8 +188,10 @@ body {
   align-items: center;
   gap: 45px;
 }
-.menu__link {
+.menu__item {
   position: relative;
+}
+.menu__link {
   font-size: 15px;
   font-weight: 400;
   line-height: 1.4;
@@ -174,20 +201,404 @@ body {
   color: var(--cta);
   font-weight: 700;
 }
-.menu__link::after {
+.menu__link:is(:hover, focus) {
+  color: var(--cta);
+}
+.menu__dropdown {
+  position: absolute;
+  left: 0;
+  top: calc(100% + 39px);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.menu__dropdown-link {
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 1.4;
+}
+
+.hero__block {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.hero__slider {
+  max-width: 563px;
+}
+.hero__slider-title {
+  max-width: 563px;
+  font-size: 55px;
+  font-weight: 500;
+  line-height: 1.1;
+  margin-bottom: 45px;
+}
+.hero__slider-subtitle {
+  max-width: 385px;
+  text-align: right;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 1.4;
+  margin-bottom: 52px;
+}
+.hero__links {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  max-width: 385px;
+}
+.hero__link-down {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 68px;
+  height: 68px;
+  background-color: rgba(110, 156, 159, 0.1);
+}
+.hero__link-down-icon {
+  width: 14px;
+  height: 28px;
+  stroke: var(--cta);
+}
+.hero__link-button {
+  color: var(--white);
+  background-color: var(--cta);
+  transition: background-color 0.5s;
+}
+.hero__link-button:is(:hover, :focus) {
+  background-color: #509498;
+}
+.hero__photos::before {
+  content: "";
+  position: absolute;
+  left: 56.5%;
+  z-index: -1;
+  width: 100%;
+  height: 826px;
+  background-color: #F1EADC;
+}
+.hero__photos-wrapper {
+  max-width: 410px;
+  padding: 120px 0 60px;
+}
+.hero__photos-block {
+  position: relative;
+}
+.hero__photos-item {
+  position: absolute;
+}
+.hero__photos-item:first-child {
+  top: 123px;
+  right: -105px;
+}
+.hero__photos-item:last-child {
+  bottom: -60px;
+  left: -130px;
+}
+.hero .slick-dots {
+  bottom: -100px;
+}
+.hero .slick-dots li {
+  position: relative;
+  display: inline-block;
+  margin: 0 6px;
+  padding: 0;
+  width: auto;
+  height: auto;
+  padding: 6px 0;
+  cursor: pointer;
+}
+.hero .slick-dots li button {
+  width: 30px;
+  height: 4px;
+  background-color: #D1D1D1;
+  transition: background-color 0.5s;
+  padding: 0;
+}
+.hero .slick-dots li button::before {
+  display: none;
+}
+.hero .slick-dots li button:is(:hover, :focus) {
+  background-color: var(--black);
+}
+.hero .slick-dots li.slick-active button {
+  background-color: var(--black);
+}
+
+.link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 243px;
+  height: 68px;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 1.39;
+}
+
+.collection {
+  padding: 130px 0 65px;
+}
+.collection__list {
+  display: flex;
+  gap: 30px;
+  margin-bottom: 65px;
+}
+.collection__item {
+  flex-basis: calc((100% - 60px) / 3);
+}
+.collection__item-link:is(:hover, :focus) .collection__item-block-img::before, .collection__item-link:is(:hover, :focus) .collection__item-block-img::after {
+  opacity: 1;
+  visibility: visible;
+}
+.collection__item-block-img {
+  position: relative;
+}
+.collection__item-block-img::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(110, 156, 159, 0.64);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.5s, visibility 0.5s;
+}
+.collection__item-block-img::after {
+  content: url(../img/arrow-right.svg);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.5s, visibility 0.5s;
+}
+.collection__item-img {
+  width: 100%;
+  max-height: 478px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-bottom: 24px;
+}
+.collection__item-info {
+  text-align: center;
+}
+.collection__item-title {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.4;
+  margin-bottom: 7px;
+}
+.collection__item-price {
+  font-size: 15px;
+  line-height: 1.4;
+  padding: 0 5px;
+}
+.collection__item-old-price {
+  color: #9C9C9C;
+  text-decoration: line-through;
+}
+.collection__item-new-price {
+  color: #998E78;
+}
+.collection__link {
+  max-width: 243px;
+  color: var(--cta);
+  border: 1px solid var(--cta);
+  transition: background-color 0.5s, color 0.5s;
+  margin: 0 auto;
+}
+.collection__link:is(:hover, :focus) {
+  color: var(--white);
+  background-color: var(--cta);
+}
+
+.title {
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 1.1;
+  margin-bottom: 92px;
+}
+
+.benefits {
+  padding: 65px 0;
+}
+.benefits__list {
+  display: flex;
+  gap: 30px;
+}
+.benefits__list-item {
+  flex-basis: calc((100% - 60px) / 3);
+}
+.benefits__item-icon {
+  width: 61px;
+  height: 61px;
+  margin-bottom: 37px;
+}
+.benefits__info {
+  max-width: 305px;
+}
+.benefits__info-title {
+  font-size: 25px;
+  line-height: 1.4;
+  margin-bottom: 24px;
+}
+.benefits__info-text {
+  font-size: 17px;
+  line-height: 1.4;
+}
+
+.team {
+  padding: 65px 0 130px;
+}
+.team__block {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.team__slider {
+  position: relative;
+  max-width: 729px;
+  max-height: 487px;
+}
+.team__photo {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.team__info {
+  max-width: 255px;
+}
+.team__info-title {
+  font-size: 25px;
+  line-height: 1.4;
+  margin-bottom: 28px;
+}
+.team__info-text-block {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 28px;
+}
+.team__info-text {
+  font-size: 17px;
+  line-height: 1.4;
+}
+.team__link {
+  position: relative;
+  color: var(--cta);
+  line-height: 1.4;
+}
+.team__arrow-icon {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1;
+  width: 28px;
+  height: 14px;
+  stroke: #858585;
+  cursor: pointer;
+}
+.team__arrow-left {
+  left: -59px;
+}
+.team__arrow-right {
+  right: -59px;
+}
+.team .slick-dots {
+  bottom: 61px;
+}
+.team .slick-dots li {
+  position: relative;
+  display: inline-block;
+  margin: 0 6px;
+  padding: 0;
+  width: auto;
+  height: auto;
+  padding: 6px 0;
+  cursor: pointer;
+}
+.team .slick-dots li button {
+  width: 30px;
+  height: 4px;
+  background: rgba(255, 255, 255, 0.36);
+  transition: background-color 0.5s;
+  padding: 0;
+}
+.team .slick-dots li button::before {
+  display: none;
+}
+.team .slick-dots li button:is(:hover, :focus) {
+  background-color: var(--white);
+}
+.team .slick-dots li.slick-active button {
+  background-color: var(--white);
+}
+.team .slick-dotted.slick-slider {
+  margin-bottom: 0;
+}
+
+.main-link {
+  position: relative;
+}
+.main-link::after {
   content: "";
   position: absolute;
   bottom: -5px;
   left: 0;
   width: 100%;
   height: 1px;
-  background-color: var(--cta);
+  background-color: #CEDEDF;
   transform: scale(0);
   transition: transform 0.5s;
 }
-.menu__link:hover {
-  color: var(--cta);
-}
-.menu__link:hover::after {
+.main-link:is(:hover, :focus)::after {
   transform: scale(1);
+}
+
+.footer {
+  background-color: #F1EADC;
+  padding: 101px 0;
+}
+.footer__block {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.footer__block:first-child {
+  margin-bottom: 31px;
+}
+.footer__contact-list {
+  display: flex;
+  flex-direction: column;
+  gap: 9px;
+}
+.footer__contact-link {
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 1.4;
+}
+.footer__privacy-list {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  margin-top: 31px;
+}
+.footer__privacy-item {
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 1.4;
+}
+.footer__social-list {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  margin-bottom: 30px;
+}
+.footer__card {
+  margin-left: auto;
 }
