--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -20,7 +20,17 @@ body {
     margin: 0 auto;
 }
 
+.wrapper {
+    position: relative;
+    overflow: hidden;
+}
+
 .header {
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    background-color: transparent;
+    transition: background-color .5s;
     padding: 34px 0;
 
     &__block {
@@ -45,15 +55,15 @@ body {
         line-height: 1.4;
         transition: color .5s;
 
-        &:hover {
+        &:is(:hover, :focus) {
             color: var(--cta);
         }
 
-        &:hover &-button {
+        &:is(:hover, :focus) &-button {
             background-color: var(--cta);
         }
 
-        &:hover &-icon {
+        &:is(:hover, :focus) &-icon {
             fill: var(--white);
         }
     }
@@ -65,6 +75,7 @@ body {
         width: 27px;
         height: 27px;
         transition: background-color .5s;
+        margin-right: 9px;
     }
 
     &__phone-icon {
@@ -84,7 +95,7 @@ body {
         position: absolute;
         top: -9px;
         right: -10px;
-        display: flex;
+        display: none;
         align-items: center;
         justify-content: center;
         width: 15px;
@@ -122,8 +133,11 @@ body {
     align-items: center;
     gap: 45px;
 
-    &__link {
+    &__item {
         position: relative;
+    }
+
+    &__link {
         font-size: 15px;
         font-weight: 400;
         line-height: 1.4;
@@ -134,25 +148,493 @@ body {
             font-weight: 700;
         }
 
-        &::after {
+        &:is(:hover, focus) {
+            color: var(--cta);
+        }
+    }
+
+    &__dropdown {
+        position: absolute;
+        left: 0;
+        top: calc(100% + 39px);
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    &__dropdown-link {
+        font-size: 13px;
+        font-weight: 400;
+        line-height: 1.4;
+    }
+}
+
+.hero {
+
+    &__block {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__slider {
+        max-width: 563px;
+    }
+
+    &__slider-item {}
+
+    &__slider-title {
+        max-width: 563px;
+        font-size: 55px;
+        font-weight: 500;
+        line-height: 1.1;
+        margin-bottom: 45px;
+    }
+
+    &__slider-subtitle {
+        max-width: 385px;
+        text-align: right;
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 1.4;
+        margin-bottom: 52px;
+    }
+
+    &__links {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        max-width: 385px;
+    }
+
+    &__link-down {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 68px;
+        height: 68px;
+        background-color: rgba(110, 156, 159, 0.10);
+    }
+
+    &__link-down-icon {
+        width: 14px;
+        height: 28px;
+        stroke: var(--cta);
+    }
+
+    &__link-button {
+        color: var(--white);
+        background-color: var(--cta);
+        transition: background-color .5s;
+
+        &:is(:hover, :focus) {
+            background-color: #509498;
+        }
+    }
+
+    &__photos {
+
+        &::before {
             content: '';
             position: absolute;
-            bottom: -5px;
+            left: 56.5%;
+            z-index: -1;
+            width: 100%;
+            height: 826px;
+            background-color: #F1EADC;
+        }
+    }
+
+    &__photos-wrapper {
+        max-width: 410px;
+        padding: 120px 0 60px;
+    }
+
+    &__photos-block {
+        position: relative;
+    }
+
+    &__photos-item {
+        position: absolute;
+
+        &:first-child {
+            top: 123px;
+            right: -105px;
+        }
+
+        &:last-child {
+            bottom: -60px;
+            left: -130px;
+        }
+    }
+
+    & .slick-dots {
+        bottom: -100px;
+    }
+
+    & .slick-dots li {
+        position: relative;
+        display: inline-block;
+        margin: 0 6px;
+        padding: 0;
+        width: auto;
+        height: auto;
+        padding: 6px 0;
+        cursor: pointer;
+    }
+
+    & .slick-dots li button {
+        width: 30px;
+        height: 4px;
+        background-color: #D1D1D1;
+        transition: background-color .5s;
+        padding: 0;
+
+        &::before {
+            display: none;
+        }
+
+        &:is(:hover, :focus) {
+            background-color: var(--black);
+        }
+    }
+
+    .slick-dots li.slick-active button {
+        background-color: var(--black);
+    }
+}
+
+.link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 243px;
+    height: 68px;
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 1.39;
+}
+
+.collection {
+    padding: 130px 0 65px;
+
+
+    &__list {
+        display: flex;
+        gap: 30px;
+        margin-bottom: 65px;
+    }
+
+    &__item {
+        flex-basis: calc((100% - 60px) / 3);
+    }
+
+    &__item-link {
+
+        &:is(:hover, :focus) .collection__item-block-img::before,
+        &:is(:hover, :focus) .collection__item-block-img::after {
+            opacity: 1;
+            visibility: visible;
+        }
+    }
+
+    &__item-block-img {
+        position: relative;
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: 0;
             left: 0;
             width: 100%;
-            height: 1px;
+            height: 100%;
+            background: rgba(110, 156, 159, 0.64);
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity .5s, visibility .5s;
+        }
+
+        &::after {
+            content: url(../img/arrow-right.svg);
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity .5s, visibility .5s;
+        }
+    }
+
+    &__item-img {
+        width: 100%;
+        max-height: 478px;
+        object-fit: cover;
+        margin-bottom: 24px;
+
+
+    }
+
+    &__item-info {
+        text-align: center;
+    }
+
+    &__item-title {
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 1.4;
+        margin-bottom: 7px;
+    }
+
+    &__item-price {
+        font-size: 15px;
+        line-height: 1.4;
+        padding: 0 5px;
+    }
+
+    &__item-old-price {
+        color: #9C9C9C;
+        text-decoration: line-through;
+    }
+
+    &__item-new-price {
+        color: #998E78;
+    }
+
+    &__link {
+        max-width: 243px;
+        color: var(--cta);
+        border: 1px solid var(--cta);
+        transition: background-color .5s, color .5s;
+        margin: 0 auto;
+
+        &:is(:hover, :focus) {
+            color: var(--white);
             background-color: var(--cta);
-            transform: scale(0);
-            transition: transform .5s;
+        }
+    }
+}
+
+.title {
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 1.1;
+    margin-bottom: 92px;
+}
+
+.benefits {
+    padding: 65px 0;
+
+    &__list {
+        display: flex;
+        gap: 30px;
+    }
+
+    &__list-item {
+        flex-basis: calc((100% - 60px) / 3);
+    }
+
+    &__item-icon {
+        width: 61px;
+        height: 61px;
+        margin-bottom: 37px;
+    }
+
+    &__info {
+        max-width: 305px;
+    }
+
+    &__info-title {
+        font-size: 25px;
+        line-height: 1.4;
+        margin-bottom: 24px;
+    }
+
+    &__info-text {
+        font-size: 17px;
+        line-height: 1.4;
+    }
+}
+
+.team {
+    padding: 65px 0 130px;
+
+    &__block {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__slider {
+        position: relative;
+        max-width: 729px;
+        max-height: 487px;
+    }
+
+    &__photo {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    &__info {
+        max-width: 255px;
+    }
+
+    &__info-title {
+        font-size: 25px;
+        line-height: 1.4;
+        margin-bottom: 28px;
+    }
+
+    &__info-text-block {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        margin-bottom: 28px;
+    }
+
+    &__info-text {
+        font-size: 17px;
+        line-height: 1.4;
+    }
+
+    &__link {
+        position: relative;
+        color: var(--cta);
+        line-height: 1.4;
+    }
+
+    &__arrow-icon {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        z-index: 1;
+        width: 28px;
+        height: 14px;
+        stroke: #858585;
+        cursor: pointer;
+    }
+
+    &__arrow-left {
+        left: -59px;
+    }
+
+    &__arrow-right {
+        right: -59px;
+    }
+
+    & .slick-dots {
+        bottom: 61px;
+    }
+
+    & .slick-dots li {
+        position: relative;
+        display: inline-block;
+        margin: 0 6px;
+        padding: 0;
+        width: auto;
+        height: auto;
+        padding: 6px 0;
+        cursor: pointer;
+    }
+
+    & .slick-dots li button {
+        width: 30px;
+        height: 4px;
+        background: rgba(255, 255, 255, 0.36);
+        transition: background-color .5s;
+        padding: 0;
+
+        &::before {
+            display: none;
         }
 
-        &:hover {
-            color: var(--cta);
-
-            &::after {
-                transform: scale(1);
-            }
+        &:is(:hover, :focus) {
+            background-color: var(--white);
         }
+    }
 
+    .slick-dots li.slick-active button {
+        background-color: var(--white);
+    }
+
+    & .slick-dotted.slick-slider {
+        margin-bottom: 0;
+    }
+}
+
+.main-link {
+    position: relative;
+
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: -5px;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background-color: #CEDEDF;
+        transform: scale(0);
+        transition: transform .5s;
+    }
+
+    &:is(:hover, :focus)::after {
+        transform: scale(1);
+    }
+}
+
+.footer {
+    background-color: #F1EADC;
+    padding: 101px 0;
+
+    &__block {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+
+        &:first-child {
+            margin-bottom: 31px;
+        }
+    }
+
+    &__contact-list {
+        display: flex;
+        flex-direction: column;
+        gap: 9px;
+    }
+
+    &__contact-item {}
+
+    &__contact-link {
+        font-size: 15px;
+        font-weight: 400;
+        line-height: 1.4;
+    }
+
+    &__privacy-list {
+        display: flex;
+        flex-direction: column;
+        gap: 6px;
+        margin-top: 31px;
+    }
+
+    &__privacy-item {
+        font-size: 13px;
+        font-weight: 400;
+        line-height: 1.4;
+    }
+
+    &__social {}
+
+    &__social-list {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        margin-bottom: 30px;
+    }
+
+    &__card {
+        margin-left: auto;
     }
 }
